:gear: ajustes no swagger
